Alignment fix

--- a/assets/styles/splashpage.css
+++ b/assets/styles/splashpage.css
@@ -21,7 +21,7 @@ div.splashpage {
 
   position: relative;
   top:50%;
-  transform: translateY(-45%);
+  transform: translateY(-50%);
 }
 
 div.title > h1, h2 {
